# spats

./: .gitignore  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.md  index.html  installation-before-v102.html  installation.html  manual.html  params.json  setup.py
cpp/: Makefile  setup.py  spats_clean.cpp
doc/: Makefile  advanced.rst  conf.py  glossary.txt  index.rst  install.rst  quickstart.rst  reference.rst  tool.rst  v102_comparison.txt
matlab/: Compute_WF.m  MLE.m  MLE_one_molecule.m  Readme.txt  bootstrap_error_bars.m  correction_factors_examples.m  entropy.m  plot_library.r
native/: Makefile  ats.hpp  cotrans.cpp  counters.cpp  counters.hpp  db.cpp  db.hpp  hash.cpp  lookup.cpp  lookup.hpp  mask.hpp  pair.hpp  parse.cpp  parse.hpp  r1lookup.cpp  r1lookup.hpp  r1tree.cpp  r1tree.hpp  reads.cpp  seq.cpp  seq.hpp  spats.cpp  spats.hpp  target.cpp  target.hpp  test.cpp  test.out  unittest.cpp  worker.cpp  worker.hpp
projects/: README
projects/spats/src/: Adapter_trimmer  Collect_fastq_stats.py  Makefile  Makefile.am  Makefile.in  adapter_trimmer.py  analyze_spats_targets.py  bundles.cpp  bundles.h  common.cpp  common.h  compute_profiles.cpp  fastq_revcomp.py  hits.cpp  hits.h  match_read_pairs.cpp  plot_library.r  prep_reads  prep_reads.cpp  reads.cpp  relabel_reads.cpp  spats.py  targets_analyzer  targets_analyzer.py
projects/spats/src/matlab/: H_fun.m  WF_fun.m  barcodes_statistics.m  log_likelihood_fun.m
segments/: classifier.py  counters.py  descriptor.py  diagram.py  experiment.py  failures.py  fragment.py  fragment_set.py  fs.py  index.py  util.py  (+9 more)
(+248 files in other folders)
